<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">

    <Button
        android:id="@+id/find_robbot"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/find_robbot" />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/disconnect"
        android:text="@string/disconnect"/>
    <ListView
        android:id="@+id/pairedlist"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textInfo"
        android:layout_alignParentStart="true"

        android:layout_alignParentLeft="true"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="30dp"
        android:visibility="invisible"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/connected_devices" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

<!--        <SeekBar-->
<!--            android:layout_width="30mm"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:id="@+id/leftPower">-->
<!--        </SeekBar>-->
        <EditText
            android:id="@+id/power"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:inputType="number"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/percents"/>
<!--        <SeekBar-->
<!--            android:layout_width="30mm"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:id="@+id/rightPower">-->
<!--        </SeekBar>-->

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center">

        <Button
            android:id="@+id/up_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/go_straight"/>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/left_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/go_left"/>
            <Button
                android:id="@+id/down_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/go_back"/>
            <Button
                android:id="@+id/right_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/go_right"/>
        </LinearLayout>

    </LinearLayout>

</LinearLayout>